@@ -1,1 +1,1 @@
-version : 0.6 alpha 3 [swiss-army-knife addon programmed by h.weber] 
+version : 0.6 alpha 4 [swiss-army-knife addon programmed by h.weber]
